--- a/web/src/stylesheets/pages/_TripPage.scss
+++ b/web/src/stylesheets/pages/_TripPage.scss
@@ -46,10 +46,11 @@
 		margin-right: auto;
 		overflow-x: hidden;
 
-		--scrollbar-width: 0px;
+		scrollbar-width: none;
 
-		&::-webkit-scrollbar {
-		}
+		// &::-webkit-scrollbar {
+    //   display: none;
+		// }
 	}
 
 	&__header {
