--- a/web/src/stylesheets/components/ListingPageComponents/_ListingReviews.scss
+++ b/web/src/stylesheets/components/ListingPageComponents/_ListingReviews.scss
@@ -15,7 +15,75 @@
 		}
 	}
 
-  &__reviews-preview {
-    
-  }
+	&__reviews-preview {
+		display: flex;
+		overflow: auto clip;
+		margin-top: 2.5rem;
+		scrollbar-width: none;
+		scroll-snap-type: x mandatory;
+
+		&::-webkit-scrollbar {
+			display: none;
+		}
+	}
+
+	&__show-all {
+		margin-top: 2.5rem;
+	}
+}
+
+.ListingReviewsItem {
+	width: 85%;
+	flex-shrink: 0;
+	height: 23rem;
+	border: 1px solid $outline-color;
+	border-radius: 1.2rem;
+	margin-right: 1rem;
+	padding: 1.5rem;
+	scroll-snap-align: start;
+	scroll-snap-stop: always;
+
+	&:last-child {
+		margin-right: 0;
+	}
+
+	&__header {
+		display: flex;
+		align-items: center;
+
+		&__avatar {
+			height: 4rem;
+			width: 4rem;
+			background-color: $avatar-background-color;
+			border-radius: 50%;
+			margin-right: 1.5rem;
+
+			> img {
+				height: 100%;
+			}
+		}
+
+		&__author {
+			.review-date {
+				font-weight: 400;
+				color: $muted-text-color;
+				font-size: 1.4rem;
+			}
+		}
+	}
+
+	&__content {
+		margin-top: 1.5rem;
+		overflow: hidden;
+		text-overflow: ellipsis;
+		display: -webkit-box;
+		-webkit-line-clamp: 6;
+		-webkit-box-orient: vertical;
+		> p {
+			text-overflow: ellipsis;
+
+			height: 95%;
+			font-weight: 400;
+		}
+	}
 }
