--- a/web/src/stylesheets/pages/_ListingPage.scss
+++ b/web/src/stylesheets/pages/_ListingPage.scss
@@ -28,6 +28,24 @@
 		}
 	}
 
+	.show-all-button {
+		width: 100%;
+		border: 1px solid black;
+		border-radius: 0.8rem;
+
+		&:hover {
+			background-color: #f7f7f7;
+			> span {
+				text-decoration: underline;
+			}
+		}
+
+		> span {
+			display: inline-block;
+			padding: 1.25rem 0;
+		}
+	}
+
 	&__basics {
 		display: flex;
 		flex-direction: column;
@@ -60,7 +78,7 @@
 @media screen and (min-width: 744px) {
 	.ListingPage {
 		--padding: 4rem;
-		
+
 		&__nav {
 			padding: 0;
 		}
