--- a/web/src/stylesheets/components/ListingPageComponents/_index.scss
+++ b/web/src/stylesheets/components/ListingPageComponents/_index.scss
@@ -1,4 +1,4 @@
 @import "./ListingMobileNav", "./ListingCarousel", "./ListingTitle",
 	"./ListingDetails", "./ListingHighlights", "./ListingListingDescription",
 	"./ListingAmenities", "./ListingMap", "./ListingReservation",
-	"./ListingReviews", "./ListingHost", "./ListingRules";
+	"./ListingReviews", "./ListingHost", "./ListingRules", "./ListingImagesGrid";
