--- a/web/src/stylesheets/components/ListingPageComponents/_ListingHost.scss
+++ b/web/src/stylesheets/components/ListingPageComponents/_ListingHost.scss
@@ -47,15 +47,15 @@
 		}
 
 		&__disclaimer {
-      margin-top: 2rem;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
+			margin-top: 2rem;
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
 
 			> span {
-        width: 90%;
+				width: 90%;
 				font-size: 1.2rem;
-        font-weight: 400;
+				font-weight: 400;
 			}
 		}
 	}
@@ -75,5 +75,66 @@
 		color: $main-color;
 		fill: $main-color;
 		margin-right: 1rem;
+	}
+}
+
+@media screen and (min-width: 744px) {
+	.ListingHost {
+		&__header {
+			justify-content: flex-start;
+
+			&__host {
+				order: 2;
+			}
+
+			&__avatar {
+				order: 1;
+				margin-right: 1.5rem;
+			}
+		}
+
+		&__medals {
+			display: flex;
+			align-items: center;
+
+			.Medal {
+				margin: 0 1rem;
+
+				&:first-child {
+					margin-left: 0;
+				}
+			}
+		}
+
+		&__contact {
+			width: 30rem;
+
+			&__disclaimer {
+				> svg {
+					margin-right: 2rem;
+				}
+
+				> span {
+					order: 2;
+				}
+			}
+		}
+	}
+}
+
+@media screen and (min-width: 1128px) {
+	.ListingHost {
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+
+		>div:first-child {
+			padding-right: 5rem;
+		}
+
+		>div:last-child {
+			.ListingHost__details li {
+				margin: 1rem 0;
+			}
+		}
 	}
 }
