--- a/web/src/stylesheets/components/ListingPageComponents/_ListingRules.scss
+++ b/web/src/stylesheets/components/ListingPageComponents/_ListingRules.scss
@@ -1,35 +1,43 @@
 .ListingRules {
+	&__rules-column {
+		&:last-child {
+			margin-top: 2rem;
+		}
 
-  &__rules-column {
-    &:last-child {
-      margin-top: 2rem;
-    }
+		h2 {
+			margin-bottom: 1rem;
+		}
 
-    h2 {
-      margin-bottom: 1rem;
-    }
+		&__rules {
+			&__rule {
+				display: flex;
+				margin: 1.25rem 0;
+				align-items: flex-start;
 
-    &__rules {
+				span {
+					font-weight: 400;
+					line-height: 1.3;
+				}
 
-      &__rule {
-        display: flex;
-        margin: 1.25rem 0;
-        align-items: flex-start;
+				img {
+					position: relative;
+					top: 0.2rem;
+					height: 1.6rem;
+					width: 1.6rem;
+					margin-right: 1.5rem;
+				}
+			}
+		}
+	}
+}
 
-        span {
-          font-weight: 400;
-          line-height: 1.3;
-        }
+@media screen and (min-width: 744px) {
+	.ListingRules {
+		display: grid;
+		grid-template-columns: 1fr 1fr;
 
-        img {
-          position: relative;
-          top: 0.2rem;
-          height: 1.6rem;
-          width: 1.6rem;
-          margin-right: 1.5rem;
-        }
-      }
-    }
-  }
-
+		&__rules-column {
+			margin: 0 !important;
+		}
+	}
 }
