--- a/web/src/stylesheets/components/ListingPageComponents/_ListingImagesGrid.scss
+++ b/web/src/stylesheets/components/ListingPageComponents/_ListingImagesGrid.scss
@@ -1,8 +1,48 @@
 .ListingImagesGrid {
-  position: relative;
-  padding-top: 50%;
-  background-color: grey;
-  border-radius: 1.8rem;
-  max-height: 58rem;
-  // not it cheif
+	position: relative;
+	padding-top: 50%;
+	background-color: white;
+	border-radius: 1.8rem;
+	max-height: 58rem;
+	overflow: hidden;
+
+	&__main-img {
+		position: absolute;
+		top: 0;
+		left: 0;
+    height: 100%;
+    width: calc(50% - 0.8rem);
+
+		> img {
+			height: 100%;
+      width: 100%;
+      object-fit: cover;
+		}
+	}
+
+  &__c1 {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    width: calc(25% - 0.4rem);
+    height: 100%;
+    background-color: red;
+  }
+
+  &__c2 {
+    position: absolute;
+    top: 0;
+    left: calc(75% + 0.4rem);
+    width: calc(25% - 0.4rem);
+    // width: 100%;
+    height: 100%;
+    background-color: blue;  }
+}
+
+@media screen and (min-width: 1280px) {
+	.ListingImagesGrid {
+		padding: 0;
+		height: 56rem;
+		width: 112rem;
+	}
 }
