Completed ListingImagesGrid; working on functionality of showing images now

--- a/web/src/stylesheets/components/ListingPageComponents/_ListingReviews.scss
+++ b/web/src/stylesheets/components/ListingPageComponents/_ListingReviews.scss
@@ -109,8 +109,11 @@
 	}
 
 	&__header {
-		display: flex;
-		align-items: center;
+		a {
+			display: flex;
+			align-items: center;
+			width: fit-content;
+		}
 
 		&__avatar {
 			height: 4rem;
