--- a/web/src/stylesheets/pages/_ListingPage.scss
+++ b/web/src/stylesheets/pages/_ListingPage.scss
@@ -68,7 +68,7 @@
 			padding-top: 2rem;
 			margin-left: 8.33333%;
 			flex: 1 1 37rem;
-			max-width: 37rem;
+			max-width: 45rem;
 		}
 
 		&__reservation-box {
@@ -91,6 +91,7 @@
 		--padding: 4rem;
 
 		&__content {
+			margin-top: 2.4rem;
 
 			.content-top-left {
 				section {
