--- a/web/src/stylesheets/components/ListingPageComponents/_ListingDetails.scss
+++ b/web/src/stylesheets/components/ListingPageComponents/_ListingDetails.scss
@@ -1,23 +1,39 @@
 .ListingDetails {
-  
-  &__top {
-    display: flex;
-    justify-content: space-between;
+	&__top {
+		display: flex;
+		justify-content: space-between;
 
-    &__host-avatar {
-      height: 5rem;
-      width: 5rem;
-      background-color: $avatar-background-color;
-      border-radius: 50%;
-    }
-  }
+		&__host-avatar {
+			height: 5rem;
+			width: 5rem;
+			background-color: $avatar-background-color;
+			border-radius: 50%;
+		}
+	}
 
-  &__nums {
-    margin-top: 1rem;
-    font-weight: 400;
+	&__nums {
+		margin-top: 1rem;
+		font-weight: 400;
 
-    >.spacer {
-      margin: 0 0.5rem;
-    }
-  }
+		> .spacer {
+			margin: 0 0.5rem;
+		}
+	}
+}
+
+@media screen and (min-width: 744px) {
+	.ListingDetails {
+		&__top {
+			&__title {
+				> div {
+					font-size: 2.4rem;
+				}
+			}
+
+			&__host-avatar {
+				height: 6rem;
+				width: 6rem;
+			}
+		}
+	}
 }
