--- a/web/src/stylesheets/components/ListingPageComponents/_ListingImagesGrid.scss
+++ b/web/src/stylesheets/components/ListingPageComponents/_ListingImagesGrid.scss
@@ -10,33 +10,75 @@
 		position: absolute;
 		top: 0;
 		left: 0;
-    height: 100%;
-    width: calc(50% - 0.8rem);
+		height: 100%;
+		width: calc(50% - 0.8rem);
 
 		> img {
 			height: 100%;
-      width: 100%;
-      object-fit: cover;
+			width: 100%;
+			object-fit: cover;
 		}
 	}
 
-  &__c1 {
-    position: absolute;
-    top: 0;
-    left: 50%;
-    width: calc(25% - 0.4rem);
-    height: 100%;
-    background-color: red;
-  }
+	// &__c1 {
+	//   position: absolute;
+	//   top: 0;
+	//   left: 50%;
+	//   width: calc(25% - 0.4rem);
+	//   height: 100%;
+	//   background-color: red;
+	// }
 
-  &__c2 {
-    position: absolute;
-    top: 0;
-    left: calc(75% + 0.4rem);
-    width: calc(25% - 0.4rem);
-    // width: 100%;
-    height: 100%;
-    background-color: blue;  }
+	&__c1 {
+		position: absolute;
+		top: 0;
+		left: 50%;
+		width: 50%;
+		height: 100%;
+		background-color: white;
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+		gap: 0.8rem;
+
+		&__image-container {
+			position: relative;
+			width: 100%;
+			height: 100%;
+		}
+
+		&__image {
+			height: 100%;
+			width: 100%;
+			object-fit: cover;
+		}
+	}
+
+	&__more-button {
+		position: absolute;
+		right: 0;
+		bottom: 0;
+		margin: 2.4rem;
+		z-index: 10;
+		display: flex;
+		align-items: center;
+		padding: 0.7rem 1.4rem;
+		border-radius: 0.8rem;
+		border: 1px solid black;
+
+		> svg {
+			margin-right: 1rem;
+		}
+	}
+
+	// &__c2 {
+	//   position: absolute;
+	//   top: 0;
+	//   left: calc(75% + 0.4rem);
+	//   width: calc(25% - 0.4rem);
+	//   // width: 100%;
+	//   height: 100%;
+	//   background-color: blue;
+	// }
 }
 
 @media screen and (min-width: 1280px) {
