--- a/web/src/stylesheets/components/ListingPageComponents/_ListingRules.scss
+++ b/web/src/stylesheets/components/ListingPageComponents/_ListingRules.scss
@@ -1,18 +1,32 @@
 .ListingRules {
+	.ListingRules-container {
+		margin-top: 2rem;
+	}
+
 	&__rules-column {
+		margin-top: 2rem;
+		
 		&:last-child {
 			margin-top: 2rem;
 		}
 
-		h2 {
+		h3 {
+			font-weight: 300;
+			font-size: 1.6rem;
 			margin-bottom: 1rem;
 		}
 
 		&__rules {
+
+			p {
+				font-weight: 400;
+			}
+
 			&__rule {
 				display: flex;
 				margin: 1.25rem 0;
 				align-items: flex-start;
+				width: 90%;
 
 				span {
 					font-weight: 400;
@@ -33,8 +47,10 @@
 
 @media screen and (min-width: 744px) {
 	.ListingRules {
-		display: grid;
-		grid-template-columns: 1fr 1fr;
+		.ListingRules-container {
+			display: grid;
+			grid-template-columns: 1fr 1fr 1fr;
+		}
 
 		&__rules-column {
 			margin: 0 !important;
