Moving all calendar logic into a provider within ListingPage

--- a/web/src/stylesheets/components/ListingPageComponents/_index.scss
+++ b/web/src/stylesheets/components/ListingPageComponents/_index.scss
@@ -1,4 +1,5 @@
 @import "./ListingMobileNav", "./ListingCarousel", "./ListingTitle",
 	"./ListingDetails", "./ListingHighlights", "./ListingListingDescription",
 	"./ListingAmenities", "./ListingMap", "./ListingReservation",
-	"./ListingReviews", "./ListingHost", "./ListingRules", "./ListingImagesGrid";
+	"./ListingReviews", "./ListingHost", "./ListingRules", "./ListingImagesGrid",
+	"./ListingReservationBox";
