--- a/web/src/stylesheets/components/EntryForm/_EntryForm.scss
+++ b/web/src/stylesheets/components/EntryForm/_EntryForm.scss
@@ -9,7 +9,6 @@
 }
 
 .EntryForm {
-
 	header {
 		height: 6rem;
 		display: flex;
@@ -84,58 +83,56 @@
 
 				@include focusOutline;
 
-				.gradient-container {
-					position: absolute;
-					top: 0;
-					left: 0;
-					bottom: 0;
-					right: 0;
-					width: 100%;
-					height: 100%;
-
-					.gradient {
-						--mouse-x: 0;
-						--mouse-y: 0;
-						display: block;
-						width: 100%;
-						height: 100%;
-						min-width: 200px;
-						background-position: calc(
-								(100 - var(--mouse-x, 0)) * 1%
-							)
-							calc((100 - var(--mouse-y, 0)) * 1%);
-						background-size: 200% 200%;
-						opacity: 0;
-						transition: opacity 1.25s ease 0s;
-						-webkit-tap-highlight-color: transparent !important;
-						background-image: radial-gradient(
-							circle,
-							#00a6de,
-							#36afe0,
-							#51b8e3,
-							#66c0e5,
-							#7ac9e8,
-							#7ac9e8,
-							#7ac9e8,
-							#7ac9e8,
-							#66c0e5,
-							#51b8e3,
-							#36afe0,
-							#00a6de
-						);
-
-						&:hover {
-							opacity: 1;
-						}
-					}
-				}
-
 				.submit-button__text {
 					display: block;
 					position: relative;
 					pointer-events: none;
 				}
 			}
+		}
+	}
+}
+
+.gradient-container {
+	position: absolute;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+	width: 100%;
+	height: 100%;
+
+	.gradient {
+		--mouse-x: 0;
+		--mouse-y: 0;
+		display: block;
+		width: 100%;
+		height: 100%;
+		min-width: 200px;
+		background-position: calc((100 - var(--mouse-x, 0)) * 1%)
+			calc((100 - var(--mouse-y, 0)) * 1%);
+		background-size: 200% 200%;
+		opacity: 0;
+		transition: opacity 1.25s ease 0s;
+		-webkit-tap-highlight-color: transparent !important;
+		background-image: radial-gradient(
+			circle,
+			#00a6de,
+			#36afe0,
+			#51b8e3,
+			#66c0e5,
+			#7ac9e8,
+			#7ac9e8,
+			#7ac9e8,
+			#7ac9e8,
+			#66c0e5,
+			#51b8e3,
+			#36afe0,
+			#00a6de
+		);
+
+		&:hover {
+			opacity: 1;
 		}
 	}
 }
