--- a/web/src/stylesheets/components/ListingPageComponents/_ListingImagesGrid.scss
+++ b/web/src/stylesheets/components/ListingPageComponents/_ListingImagesGrid.scss
@@ -1,10 +1,10 @@
 .ListingImagesGrid {
 	position: relative;
-	// padding-top: 50%;
+	padding-top: 50%;
 	background-color: white;
 	border-radius: 1.8rem;
-	min-height: 30rem;
-	height: 52vh;
+	// min-height: 30rem;
+	// height: 52vh;
 	max-height: 56rem;
 	overflow: hidden;
 
@@ -13,8 +13,9 @@
 		left: 0;
 		height: 100%;
 		width: calc(50% - 0.8rem);
-
+		
 		@include image-darken;
+		position: absolute;
 
 		> img {
 			height: 100%;
@@ -56,7 +57,7 @@
 		right: 0;
 		bottom: 0;
 		margin: 2.4rem;
-		z-index: 10;
+		z-index: 2;
 		display: flex;
 		align-items: center;
 		padding: 0.7rem 1.4rem;
@@ -67,21 +68,19 @@
 			margin-right: 1rem;
 		}
 	}
+}
 
-	// &__c2 {
-	//   position: absolute;
-	//   top: 0;
-	//   left: calc(75% + 0.4rem);
-	//   width: calc(25% - 0.4rem);
-	//   // width: 100%;
-	//   height: 100%;
-	//   background-color: blue;
-	// }
+@media screen and (min-width: 950px) {
+	.ListingImagesGrid {
+		padding: 0;
+		height: 54vh;
+		max-height: 56rem;
+	}
 }
 
 @media screen and (min-width: 1280px) {
 	.ListingImagesGrid {
-		padding: 0;
+		// padding: 0;
 		// height: 56rem;
 		width: 112rem;
 	}
