--- a/web/src/stylesheets/pages/_ListingPage.scss
+++ b/web/src/stylesheets/pages/_ListingPage.scss
@@ -73,8 +73,7 @@
 
 		&__reservation-box {
 			width: 100%;
-			height: 300px;
-			background-color: grey;
+			// height: 300px;
 			display: block;
 			position: sticky;
 			top: 15rem;
