--- a/web/src/stylesheets/components/ListingPageComponents/_index.scss
+++ b/web/src/stylesheets/components/ListingPageComponents/_index.scss
@@ -2,4 +2,4 @@
 	"./ListingDetails", "./ListingHighlights", "./ListingListingDescription",
 	"./ListingAmenities", "./ListingMap", "./ListingReservation",
 	"./ListingReviews", "./ListingHost", "./ListingRules", "./ListingImagesGrid",
-	"./ListingReservationBox";
+	"./ListingReservationBox", "./ListingShowImages";
