--- a/web/src/stylesheets/components/ListingPageComponents/_ListingReservation.scss
+++ b/web/src/stylesheets/components/ListingPageComponents/_ListingReservation.scss
@@ -4,38 +4,8 @@
 		flex-direction: column;
 
 		&__rdr-calendar {
-		}
-
-		&__clear-button {
-			margin-top: 1rem;
-			align-self: start;
-
-			> span {
-				display: block;
-				height: 2rem;
-				position: relative;
-				text-decoration: underline;
-				font-size: 1.4rem;
-				background-color: transparent;
-
-				&::after {
-					content: "";
-					background-color: inherit;
-					display: block;
-					box-sizing: content-box;
-					height: 100%;
-					width: 100%;
-					padding: 0.75rem;
-					position: absolute;
-					left: -0.75rem;
-					top: -0.75rem;
-					z-index: -1;
-					border-radius: 0.8rem;
-				}
-			}
-
-			&:hover span {
-				background-color: rgba(206, 206, 206, 0.283);
+			&--double {
+				display: none;
 			}
 		}
 	}
@@ -59,17 +29,69 @@
 		> span {
 			text-decoration: line-through !important;
 			text-decoration-color: #aeb9bf !important;
-
-			// &::after {
-			// 	position: absolute;
-			// 	content: "";
-			// 	top: 50%;
-			// 	transform: translateY(-50%);
-			// 	width: 30%;
-			// 	height: 1px;
-			// 	background-color: #aeb9bf;
-			// }
 		}
+	}
+}
+
+.rdrDayNumber {
+	font-size: 1.4rem;
+	font-weight: 400;
+}
+
+.rdrStartEdge,
+.rdrDayStartOfWeek .rdrInRange,
+.rdrDayStartOfWeek .rdrDayInPreview {
+	border-radius: 0 !important;
+}
+
+.rdrEndEdge,
+.rdrDayEndOfWeek .rdrInRange,
+.rdrDayEndOfWeek .rdrDayInPreview {
+	border-radius: 0 !important;
+}
+
+.rdrDayStartPreview {
+	border-radius: 0 !important;
+}
+.rdrDayEndPreview {
+	border-radius: 0 !important;
+}
+
+.rdrInRange,
+.rdrDayInPreview {
+	border-radius: 0 !important;
+}
+
+.calendar-clear-button {
+	margin-top: 1rem;
+	align-self: start;
+
+	> span {
+		display: block;
+		height: 2rem;
+		position: relative;
+		text-decoration: underline;
+		font-size: 1.4rem;
+		background-color: transparent;
+
+		&::after {
+			content: "";
+			background-color: inherit;
+			display: block;
+			box-sizing: content-box;
+			height: 100%;
+			width: 100%;
+			padding: 0.75rem;
+			position: absolute;
+			left: -0.75rem;
+			top: -0.75rem;
+			z-index: -1;
+			border-radius: 0.8rem;
+		}
+	}
+
+	&:hover span {
+		background-color: rgba(206, 206, 206, 0.283);
 	}
 }
 
@@ -95,6 +117,30 @@
 
 				.rdrDayNumber {
 					font-size: 1.6rem;
+				}
+			}
+		}
+	}
+}
+
+@media screen and (min-width: 1200px) {
+	.ListingReservation {
+		.rdrCalendarWrapper {
+			max-width: unset;
+			width: 100%;
+		}
+
+		&__calendar {
+			.rdrDay {
+				height: 3vw !important;
+				max-height: 4rem;
+			}
+			
+			&__rdr-calendar {
+				display: none;
+
+				&--double {
+					display: block;
 				}
 			}
 		}
