--- a/web/src/stylesheets/components/ListingPageComponents/_ListingListingDescription.scss
+++ b/web/src/stylesheets/components/ListingPageComponents/_ListingListingDescription.scss
@@ -29,7 +29,7 @@
 	border-radius: 1.2rem;
 
 	&__nav {
-		padding: 2rem;
+		padding: 2rem 3rem;
 
 		> button {
 
@@ -43,7 +43,8 @@
 		padding: 3rem;
 
 		p {
-			white-space: pre-wrap
+			white-space: pre-wrap;
+			font-weight: 400;
 		}
 	}
 }
