Fixed bug in ListingTypes on landing page; clicking right arrow and opening past 1128px

--- a/web/src/stylesheets/components/_ListingTypes.scss
+++ b/web/src/stylesheets/components/_ListingTypes.scss
@@ -122,6 +122,7 @@
 				// I have no idea where 1.2rem is from
 				gap: 1.6rem; // Added 0.4rem to this
 				grid-auto-columns: calc(25% - 1.2rem);
+				transform: translateX(0%) !important;
 			}
 		}
 	}
