--- a/web/src/stylesheets/pages/_UserPage.scss
+++ b/web/src/stylesheets/pages/_UserPage.scss
@@ -39,6 +39,7 @@
 	&__badges {
 		display: flex;
 		flex-direction: column;
+		box-shadow: rgba(0, 0, 0, 0.12) 0px 6px 16px;
 
 		.badge {
 			margin: 1rem 0;
@@ -252,7 +253,7 @@
 			border: 1px solid $muted-line-color;
 			height: fit-content;
 			padding: 3rem;
-			border-radius: 0.8rem;
+			border-radius: 1.2rem;
 		}
 
 		&__listings {
