--- a/web/src/stylesheets/components/ListingPageComponents/_ListingAmenities.scss
+++ b/web/src/stylesheets/components/ListingPageComponents/_ListingAmenities.scss
@@ -1,6 +1,5 @@
 .ListingAmenities {
 	&__title {
-
 	}
 
 	&__amenities {
@@ -25,5 +24,35 @@
 
 	&__show-all {
 		margin: 1rem 0;
+	}
+}
+
+.ShowMore {
+	&--ShowListingAmenities {
+		.ShowMore__container {
+			h2 {
+				font-weight: 300;
+				margin-bottom: 2rem;
+			}
+
+			ul {
+				li {
+					margin: 1.4rem 0;
+					display: flex;
+					align-items: center;
+
+					img {
+						height: 2.2rem;
+						width: 2.2rem;
+						margin-right: 1.4rem;
+					}
+
+					span {
+						font-weight: 400;
+						white-space: pre-wrap;
+					}
+				}
+			}
+		}
 	}
 }
