--- a/web/src/stylesheets/components/ListingPageComponents/_ListingListingDescription.scss
+++ b/web/src/stylesheets/components/ListingPageComponents/_ListingListingDescription.scss
@@ -16,35 +16,13 @@
 	}
 }
 
-.ShowListingDescription {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-
-	width: 90vw;
-	max-width: 70rem;
-	height: 80vh;
-	background-color: white;
-	border-radius: 1.2rem;
-
-	&__nav {
-		padding: 2rem 3rem;
-
-		> button {
-
-			@include buttonSvgOutline;
-		}
-	}
-	
-	&__container {
-		height: calc(98% - 6.2rem);
-		overflow-y: auto;
-		padding: 3rem;
-
-		p {
-			white-space: pre-wrap;
-			font-weight: 400;
+.ShowMore {
+	&--ShowListingDescription {
+		.ShowMore__container {
+			p {
+				white-space: pre-wrap;
+				font-weight: 400;
+			}
 		}
 	}
 }
