--- a/web/src/stylesheets/components/ListingPageComponents/_ListingRules.scss
+++ b/web/src/stylesheets/components/ListingPageComponents/_ListingRules.scss
@@ -4,9 +4,9 @@
 	}
 
 	&__rules-column {
-		margin-top: 2rem;
+		margin-top: 4rem;
 		
-		&:last-child {
+		&:first-child {
 			margin-top: 2rem;
 		}
 
