--- a/web/src/stylesheets/pages/_TripPage.scss
+++ b/web/src/stylesheets/pages/_TripPage.scss
@@ -231,6 +231,7 @@
 					font-weight: 300;
 					border-top: 1px solid $muted-line-color;
 					padding-top: 1rem;
+					font-size: 1.8rem;
 				}
 
 				margin: 1rem 0;
