--- a/web/src/stylesheets/components/ListingPageComponents/_ListingMap.scss
+++ b/web/src/stylesheets/components/ListingPageComponents/_ListingMap.scss
@@ -37,10 +37,61 @@
 	}
 }
 
+div.ShowMore--ShowListingMap {
+	border-radius: 0;
+	height: 100vh;
+	width: 100vw;
+	max-width: unset;
+
+	.ShowMore__container {
+		height: calc(100% - 6.2rem);
+
+		.column-1 {
+			.title {
+				font-weight: 500;
+				margin-bottom: 2rem;
+			}
+
+			.description {
+				margin-top: 1.4rem;
+				font-weight: 400;
+			}
+		}
+
+		.column-2 {
+			display: none;
+		}
+	}
+}
+
 @media screen and (min-width: 744px) {
 	.ListingMap {
 		&__map {
 			height: 48rem;
+		}
+	}
+
+	div.ShowMore--ShowListingMap {
+
+		.ShowMore__container {
+			display: flex;
+
+			.column-1 {
+				max-width: 40rem;
+				margin-right: 3rem;
+			}
+
+			.column-2 {
+				display: block;
+				height: 100%;
+				width: 100%;
+
+				.map-container {
+					background-color: grey;
+					width: 100%;
+					height: 100%;
+				}
+			}
 		}
 	}
 }
