Fixed requerying listingById query after reservationCreation mutation

--- a/web/src/stylesheets/components/ListingPageComponents/_ListingReservation.scss
+++ b/web/src/stylesheets/components/ListingPageComponents/_ListingReservation.scss
@@ -62,6 +62,10 @@
 	border-radius: 0 !important;
 }
 
+.rdrDayToday .rdrDayNumber span {
+	font-weight: 400;
+}
+
 .calendar-clear-button {
 	margin-top: 1rem;
 	align-self: start;
