--- a/web/src/stylesheets/pages/_TripPage.scss
+++ b/web/src/stylesheets/pages/_TripPage.scss
@@ -49,7 +49,7 @@
 		scrollbar-width: none;
 
 		// &::-webkit-scrollbar {
-    //   display: none;
+		//   display: none;
 		// }
 	}
 
@@ -140,6 +140,49 @@
 	&__contact {
 		display: flex;
 		flex-direction: column;
+	}
+
+	.cancel-button {
+		position: relative;
+
+		.button {
+			width: 100%;
+
+			> div {
+				border-bottom: 0;
+			}
+		}
+
+		.confirmation {
+			width: 100%;
+			z-index: 5;
+			display: none;
+			position: absolute;
+			left: 0;
+			top: 0;
+
+			&.show {
+				display: block;
+
+				.button.active a,
+				.button.active div {
+					background-color: $main-color;
+					text-align: center;
+
+					span {
+						color: white;
+
+						&:hover {
+							text-decoration: underline;
+						}
+					}
+
+					svg {
+						fill: white !important;
+					}
+				}
+			}
+		}
 	}
 
 	.button.active {
