Added avatar generation on new user creation

--- a/web/src/stylesheets/pages/_TripsPage.scss
+++ b/web/src/stylesheets/pages/_TripsPage.scss
@@ -81,8 +81,13 @@
 		}
 
 		&__list:empty {
+			margin-bottom: 0;
+
 			+ .TripsPage__content__placeholder {
 				display: block;
+				button {
+					max-width: 20rem;
+				}
 			}
 		}
 	}
