Properly added error page to query/mutation errors and removed console.logs

--- a/web/src/stylesheets/main.scss
+++ b/web/src/stylesheets/main.scss
@@ -24,4 +24,4 @@
 // 6. Page-specific styles
 @import "pages/ListingPage", "pages/LandingPage", "pages/EntryPage",
 	"pages/UserPage", "pages/HostPage", "pages/TripsPage", "pages/TripPage",
-	"pages/SearchPage";
+	"pages/SearchPage", "pages/ErrorPage";
