--- a/web/src/stylesheets/components/_LoadingButton.scss
+++ b/web/src/stylesheets/components/_LoadingButton.scss
@@ -3,33 +3,31 @@
 	height: fit-content;
 
 	display: flex;
+}
 
-	&__dot {
-		width: 0.7rem;
-		height: 0.7rem;
-		background: black;
-		opacity: 10%;
-		border-radius: 50%;
-		margin: 0.2rem;
-		animation: glow 0.5s ease-in-out;
-		animation-direction: alternate-reverse;
-		animation-iteration-count: infinite;
+.Loading-container__dot {
+	width: 0.7rem;
+	height: 0.7rem;
+	background: black;
+	opacity: 10%;
+	border-radius: 50%;
+	margin: 0.2rem;
+	animation: glow 0.5s ease-in-out alternate-reverse infinite;
 
-		&:nth-child(1) {
-			animation-delay: 0.125s;
-		}
+	&:nth-child(1) {
+		animation-delay: 0.125s;
+	}
 
-		&:nth-child(2) {
-			animation-delay: 0.25s;
-		}
+	&:nth-child(2) {
+		animation-delay: 0.25s;
+	}
 
-		&:nth-child(3) {
-			animation-delay: 0.375s;
-		}
+	&:nth-child(3) {
+		animation-delay: 0.375s;
+	}
 
-		&:nth-child(4) {
-			animation-delay: 0.5s;
-		}
+	&:nth-child(4) {
+		animation-delay: 0.5s;
 	}
 }
 
@@ -39,9 +37,6 @@
 	}
 	100% {
 		opacity: 10%;
-	}
-	0% {
-		opacity: 100%;
 	}
 }
 
